--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.66.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "7.1.11"
   }
 }
